コラム画面レスポンシブ対応

--- a/resources/sass/_column-edit.scss
+++ b/resources/sass/_column-edit.scss
@@ -1,4 +1,4 @@
-.column_edit{
-    background-color: #fff;
-    padding-top: 2em;
+.solid_column{
+    background-color: #EEEEEE;
+    border: solid 1px;
 }
