notes&column投稿時のバリデーションエラー時にscrollの位置を0に戻す機能実装

--- a/resources/sass/_note-form.scss
+++ b/resources/sass/_note-form.scss
@@ -4,7 +4,7 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, .3);
   max-height: 75vh;
   max-width: 600px;
-  overflow: scroll;
+  overflow: auto;
   padding: 1.5rem;
   position: absolute;
   right: 2%;
