--- a/public/css/app.css
+++ b/public/css/app.css
@@ -818,6 +818,9 @@ img {
   border: 0;
   padding: 0.7rem 1.2rem;
   font-size: 1.2rem;
+  border: 1px solid #dedede;
+  transition: border-color 300ms ease-in-out, color 300ms ease-in-out;
+  background-color: #EFEFEF;
 }
 
 .button--inverse {
@@ -859,6 +862,7 @@ img {
 
 .button_column {
   border: 1px solid #dedede;
+  background-color: #EFEFEF;
   border-radius: 0.25rem;
   color: #8a8a8a;
   cursor: pointer;
@@ -926,6 +930,7 @@ img {
 
 .button_notes {
   border: 1px solid #dedede;
+  background-color: #EFEFEF;
   border-radius: 0.25rem;
   color: #8a8a8a;
   cursor: pointer;
@@ -1474,6 +1479,7 @@ li {
 .display {
   display: flex;
   justify-content: center;
+  padding-top: 1em;
 }
 
 .display-item {
@@ -1483,12 +1489,14 @@ li {
 
 input.width-record {
   height: 25%;
-  margin: 1em 0 0 1.5em;
+  margin: 0 0 0 1.5em;
+  border: solid 1px;
 }
 
 input.width-time {
   height: 25%;
-  margin: 1em 0 0 1.5em;
+  margin: 0 0 0 1.5em;
+  border: solid 1px;
 }
 
 .image-radio-button {
@@ -2107,26 +2115,6 @@ li {
 
 .border {
   border-bottom: 1px solid #ccc;
-}
-
-.display {
-  display: flex;
-  justify-content: center;
-}
-
-.display-item {
-  display: flex;
-  margin-bottom: 1.5em;
-}
-
-input.width-record {
-  height: 25%;
-  margin: 1em 0 0 1.5em;
-}
-
-input.width-time {
-  height: 25%;
-  margin: 1em 0 0 1.5em;
 }
 
 .image-radio-button {
