--- a/resources/sass/_top.scss
+++ b/resources/sass/_top.scss
@@ -1,6 +1,6 @@
 .top_page{
     width: 100%;
-    postion: relative;
+    //postion: relative;
     background-color: #000000;
     display:inline-block;
 }
@@ -23,7 +23,7 @@
 .top_page div.top_sentence{
   position: absolute;
   text-align: center;
-  top: 70%; 
+  top: 50%; 
   left: 50%; 
   transform: translateY(-50%) translateX(-50%); 
   -webkit-transform: translateY(-50%) translateX(-50%)
@@ -45,7 +45,7 @@
   .top_page div.top_sentence{
   position: absolute;
   text-align: center;
-  top: 33%; 
+  top: 17%; 
   left: 50%;
   width: 75%;
   transform: translateY(-50%) translateX(-50%); 
